--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 
     <!-- Navbar
     ================================================== -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-static-top">
       <div class="navbar-inner">
         <div class="">
           <a class="brand" href="/">B4CM</a>
@@ -57,6 +57,21 @@
             </ul>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!-- Header
+    ================================================== -->
+    <div class="header">
+      <div class="logo">
+      </div>
+      <div class="title">
+        <h1>Before<br>
+            CriticalMass</h1>
+      </div>
+      <div class="tag-line">
+        <h3>"If you like Yelp,<br>
+                 but hate a crowd."</h3>
       </div>
     </div>
 
