Added footer placeholders.

--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,18 @@
 
     <div class="container" ng-view></div>
 
+    <!-- Footer
+    ================================================== -->
+    <div class="footer">
+      <ul>
+        <li>About</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>FAQ</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+
     <script src="components/angular/angular.js"></script>
 
     <!-- build:js scripts/scripts.js -->
