Added line breaks and padding.

--- a/app/index.html
+++ b/app/index.html
@@ -66,13 +66,12 @@
       <div class="logo">
       </div>
       <div class="title">
-        <h1>Before<br>
-            CriticalMass</h1>
+        <h1>Before<br>CriticalMass</h1>
       </div>
       <div class="tag-line">
-        <h3>"If you like Yelp,<br>
-                 but hate a crowd."</h3>
+        <h3>"If you like Yelp,<br>but hate a crowd."</h3>
       </div>
+      <hr>
     </div>
 
     <div class="container" ng-view></div>
@@ -80,6 +79,7 @@
     <!-- Footer
     ================================================== -->
     <div class="footer">
+      <hr>
       <ul>
         <li>About</li>
         <li>Privacy</li>
