--- a/app/index.html
+++ b/app/index.html
@@ -81,11 +81,12 @@
     <div class="footer">
       <hr>
       <ul>
-        <li>About</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>FAQ</li>
-        <li>Contact</li>
+        <li><a ng-href="#/about">About</a></li>
+        <li><a ng-href="#/privacy">Privacy</a></li>
+        <li><a ng-href="#/terms">Terms</a></li>
+        <li><a ng-href="#/faq">FAQ</a></li>
+        <li><a ng-href="#/advertise">Advertise</a></li>
+        <li><a ng-href="#/contact">Contact</a></li>
       </ul>
     </div>
 
