--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
     <script src="scripts/controllers/contact.js"></script>
     <script src="scripts/controllers/signup.js"></script>
     <script src="scripts/controllers/advertise.js"></script>
+    <script src="scripts/controllers/signin.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
