--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
             </ul>
             <ul class="nav pull-right" ng-hide="name">
               <li class="">
-                <a ng-click="openLogin()">Sign In</a>
+                <a ng-href="#/signin">Sign In</a>
               </li>
               <li class="">
                 <p> || </p>
