--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,8 @@
     <script src="scripts/controllers/signup.js"></script>
     <script src="scripts/controllers/advertise.js"></script>
     <script src="scripts/controllers/signin.js"></script>
+    <script src="scripts/controllers/addReview.js"></script>
+    <script src="scripts/controllers/addWatch.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
