Adjust header color and position for logo, title, and tag line.

--- a/app/index.html
+++ b/app/index.html
@@ -63,17 +63,17 @@
     <!-- Header
     ================================================== -->
     <div class="header">
-      <div class="logo">
-      </div>
+      <img class="logo" src="images/b4cm-logo.png">
       <div class="title">
-        <h1>Before<br>CriticalMass</h1>
+        <h2 class="before">Before</h2>
+        <h2 class="criticalmass">CriticalMass</h2>
       </div>
       <div class="tag-line">
-        <h3>"If you like Yelp,<br>but hate a crowd."</h3>
+        <h4 class="yelp">"If you like Yelp</h4>
+        <h4 class="hate">but hate a crowd."</h4>
       </div>
-      <hr>
     </div>
-
+    <hr>
     <div class="container" ng-view></div>
 
     <!-- Footer
