Updated color and position of navbar elements.

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="navbar-inner">
         <div class="">
-          <a class="brand" href="/">B4CM</a>
+          <a class="brand" href="/"><span class="letter-b">B</span><span class="num-four">4</span>CM</a>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right" ng-show="name">
               <li class="">
@@ -48,7 +48,7 @@
               <li class="">
                 <a ng-href="#/signin">Sign In</a>
               </li>
-              <li class="">
+              <li class="or">
                 <p> || </p>
               </li>
               <li class="">
@@ -69,7 +69,7 @@
         <h2 class="criticalmass">CriticalMass</h2>
       </div>
       <div class="tag-line">
-        <h4 class="yelp">"If you like Yelp</h4>
+        <h4 class="yelp">"If you like Yelp,</h4>
         <h4 class="hate">but hate a crowd."</h4>
       </div>
     </div>
