--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,16 @@
         <h4 class="yelp">"If you like Yelp,</h4>
         <h4 class="hate">but hate a crowd."</h4>
       </div>
+      <!-- AddThis Button BEGIN -->
+      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+        <a class="addthis_button_preferred_1"></a>
+        <a class="addthis_button_preferred_2"></a>
+        <a class="addthis_button_compact"></a>
+        <a class="addthis_counter addthis_bubble_style"></a>
+      </div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52042edd403323ff"></script>
+<!-- AddThis Button END -->
     </div>
     <hr>
     <div class="container" ng-view></div>
