Add link home to header logo and title.

--- a/app/index.html
+++ b/app/index.html
@@ -63,11 +63,13 @@
     <!-- Header
     ================================================== -->
     <div class="header">
-      <img class="logo" src="images/b4cm-logo.png">
-      <div class="title">
-        <h2 class="before">Before</h2>
-        <h2 class="criticalmass">CriticalMass</h2>
-      </div>
+      <a href="#/">
+        <img class="logo" src="images/b4cm-logo.png">
+        <div class="title">
+          <h2 class="before">Before</h2>
+          <h2 class="criticalmass">CriticalMass</h2>
+        </div>
+      </a>
       <div class="tag-line">
         <h4 class="yelp">"If you like Yelp,</h4>
         <h4 class="hate">but hate a crowd."</h4>
