Add google maps api script with key.

--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,7 @@
       </ul>
     </div>
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlNNSwxYFG63J-8V6Vw7lmJx1HuMzQJeY&sensor=false"></script>
     <script src="components/angular/angular.js"></script>
 
     <!-- build:js scripts/scripts.js -->
