Switch name to crowd factor.

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="navbar-inner">
         <div class="">
-          <a class="brand" href="/"><span class="letter-b">B</span><span class="num-four">4</span>CM</a>
+          <a class="brand" href="/"><span class="letter-b">C</span>F</a>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right" ng-show="name">
               <li class="">
@@ -66,8 +66,8 @@
       <a href="#/">
         <img class="logo" src="images/b4cm-logo.png">
         <div class="title">
-          <h2 class="before">Before</h2>
-          <h2 class="criticalmass">CriticalMass</h2>
+          <h2 class="before">Crowd</h2>
+          <h2 class="criticalmass">Factor</h2>
         </div>
       </a>
       <div class="tag-line">
