--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,7 @@
     <script src="scripts/controllers/signin.js"></script>
     <script src="scripts/controllers/addReview.js"></script>
     <script src="scripts/controllers/addWatch.js"></script>
+    <script src="scripts/services/spot.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
