--- a/app/index.html
+++ b/app/index.html
@@ -124,6 +124,7 @@
     <script src="scripts/controllers/addReview.js"></script>
     <script src="scripts/controllers/addWatch.js"></script>
     <script src="scripts/services/spot.js"></script>
+    <script src="scripts/services/listings.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
