Add searchListings function to rootScope in app run method so available on all pages.

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
               <option>All</option>
             </select>
             <input type="text" class="form-control" placeholder="City or Zip">
-            <button class="btn">Search</button>
+            <button class="btn" ng-click="searchListings()">Search</button>
           </form>
           <div class="nav-collapse collapse login">
             <ul class="nav pull-right" ng-show="name">
