--- a/app/index.html
+++ b/app/index.html
@@ -33,13 +33,9 @@
         <div class="">
           <a class="brand" href="/"><span class="letter-b">C</span>F</a>
           <form class="form-horizontal find-spot">
-            <select class="type">
-              <option>Food</option>
-              <option>Study</option>
-              <option>Social</option>
-              <option>All</option>
+            <select class="type" ng-model="spotType" ng-options="type.name for type in spotTypes">
             </select>
-            <input type="text" class="form-control" placeholder="City or Zip">
+            <input type="text" class="form-control" ng-model="searchLocation" placeholder="City or Zip">
             <button class="btn" ng-click="searchListings()">Search</button>
           </form>
           <div class="nav-collapse collapse login">
