--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlNNSwxYFG63J-8V6Vw7lmJx1HuMzQJeY&sensor=false"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-google-maps.js"></script>
+    <script src="components/imageupload.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
