--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,7 @@
     <script src="scripts/controllers/addWatch.js"></script>
     <script src="scripts/services/spot.js"></script>
     <script src="scripts/services/listings.js"></script>
+    <script src="scripts/services/geolocation.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
