Add firebase and angularFire.

--- a/app/index.html
+++ b/app/index.html
@@ -108,8 +108,10 @@
       </ul>
     </div>
 
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlNNSwxYFG63J-8V6Vw7lmJx1HuMzQJeY&sensor=false"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="components/angularFire.js"></script>
     <script src="components/angular-google-maps.js"></script>
     <script src="components/imageupload.js"></script>
 
