--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
     </div>
 
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src='https://cdn.firebase.com/v0/firebase-simple-login.js'</script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlNNSwxYFG63J-8V6Vw7lmJx1HuMzQJeY&sensor=false"></script>
     <script src="components/FirebaseGeo.js"></script>
     <script src="components/angular/angular.js"></script>
@@ -135,6 +136,7 @@
     <script src="scripts/services/spot.js"></script>
     <script src="scripts/services/listings.js"></script>
     <script src="scripts/services/geolocation.js"></script>
+    <script src="scripts/services/user.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
