Fix separator display between name and logout in navbar.

--- a/app/index.html
+++ b/app/index.html
@@ -42,8 +42,8 @@
               <li class="">
               <a>Welcome {{name}}</a>
               </li>
-              <li class="">
-                <p> || </p>
+              <li class="or">
+                ||
               </li>
               <li class="">
                 <a ng-click="signout()">Sign Out</a>
@@ -54,7 +54,7 @@
                 <a ng-href="#/signin">Sign In</a>
               </li>
               <li class="or">
-                <p> || </p>
+                ||
               </li>
               <li class="">
                 <a ng-href="#/signup">Sign Up</a>
