Implement sign out functionality.

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                 ||
               </li>
               <li class="">
-                <a ng-click="signout()">Sign Out</a>
+                <a ng-click="logOut()" class="signout">Sign Out</a>
               </li>
             </ul>
             <ul class="nav pull-right" ng-hide="name">
