--- a/app/index.html
+++ b/app/index.html
@@ -109,8 +109,8 @@
     </div>
 
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-    <script src='https://cdn.firebase.com/v0/firebase-simple-login.js'</script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlNNSwxYFG63J-8V6Vw7lmJx1HuMzQJeY&sensor=false"></script>
+    <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
     <script src="components/FirebaseGeo.js"></script>
     <script src="components/angular/angular.js"></script>
     <script src="components/angularFire.js"></script>
