--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,7 @@
     <script src="components/angularFire.js"></script>
     <script src="components/angular-google-maps.js"></script>
     <script src="components/imageupload.js"></script>
+    <script src="components/modal.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
