--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
     <script src="scripts/services/geolocation.js"></script>
     <script src="scripts/services/user.js"></script>
     <script src="scripts/services/util.js"></script>
+    <script src="scripts/controllers/welcome.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
