--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
             <input type="text" class="form-control" ng-model="searchLocation" placeholder="City or Zip">
             <button class="btn" ng-click="searchListings(spotType.name, searchLocation)">Search</button>
           </form>
-          <div class="nav-collapse collapse login">
+          <div class="nav-collapse collapse login" ng-cloak>
             <ul class="nav pull-right" ng-show="name">
               <li class="">
               <a>Welcome {{name}}</a>
