Add conditional ie8 code to tell user to update. Need to test in ie8 somewhere.

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,9 @@
 
     <div class="container" ng-view></div>
 
+    <!--[if lt IE 8]>
+      <p>Appologies, but to use the site you need to upgrade your version of Internet Explorer to 9 or greater.  You could also use another browser such as Firefox, Chrome, Safari, or Opera.</p>
+    <![endif]-->
     <!-- Footer
     ================================================== -->
     <hr>
