Made map fixed on scroll on listings page. Required addition of jQuery.

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
       </ul>
     </div>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlNNSwxYFG63J-8V6Vw7lmJx1HuMzQJeY&sensor=false"></script>
     <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
@@ -120,6 +121,7 @@
     <script src="scripts/services/util.js"></script>
     <script src="scripts/controllers/welcome.js"></script>
     <script src="scripts/controllers/editSpot.js"></script>
+    <script src="scripts/directives/scrollPosition.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
