Add multiple watches route.

--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
     <script src="scripts/controllers/welcome.js"></script>
     <script src="scripts/controllers/editSpot.js"></script>
     <script src="scripts/directives/scrollPosition.js"></script>
+    <script src="scripts/controllers/addMultipleWatches.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
