Add title and description to index.

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
+    <title>Crowdabout</title>
+    <meta name="description" content="Crowdabout is like a weather app, except for crowds.  If you want to be in a crowd or avoid a crowd, Crowdabout shows you the best times to go to your favorite places.  Whether its for social, study, work, or food, crowdabout helps you find bars, cafes, restraunts, and other places with the right scene for you.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/main.css -->
