Add route, view, controller, and test for user home page.

--- a/app/index.html
+++ b/app/index.html
@@ -124,6 +124,7 @@
     <script src="scripts/controllers/editSpot.js"></script>
     <script src="scripts/directives/scrollPosition.js"></script>
     <script src="scripts/controllers/addMultipleWatches.js"></script>
+    <script src="scripts/controllers/home.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
