Use listings page as template for home view and controller.  Remove awesome things from test.

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
           <div class="nav-collapse collapse login" ng-cloak>
             <ul class="nav pull-right" ng-show="name">
               <li class="">
-              <a>Welcome {{name}}</a>
+              <a ng-href="#/home">Welcome {{name}}</a>
               </li>
               <li class="or">
                 ||
