Rough draft navbar.

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="navbar-inner">
         <div class="">
-          <a class="brand" href="/"><img src="../images/ca-logo-200x25.png"></a>
+          <a class="brand" href="/"><img height="25px" width="200px" src="../images/logo.png"></a>
           <form class="form-horizontal find-spot">
             <select class="type" ng-model="spotType" ng-options="type.name for type in spotTypes"></select>
             <input type="text" class="form-control" ng-model="searchLocation" placeholder="City or Zip">
