Fix search icon on mobile.

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
         <select class="type" ng-model="spotType" ng-options="type.name for type in spotTypes"></select>
         <input type="text" class="form-control" ng-model="searchLocation" placeholder="City or Zip">
         <button class="btn search-btn" ng-click="searchListings(spotType.name, searchLocation)">Search</button>
-        <img class="search-icon" ng-click="searchListings(spotType.name, searchLocation)" src="../images/search-icon.png">
+        <img class="search-icon" ng-click="searchListings(spotType.name, searchLocation)" src="../images/search-icon.png" height="30px" width="30px">
       </form>
       <!-- AddThis Button BEGIN -->
       <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
